--- a/src/main/webapp/styles/weix.css
+++ b/src/main/webapp/styles/weix.css
@@ -10,4 +10,8 @@ ul{list-style: none;}
 .font_2{font-size:2.625em;}
 .font_3{font-size: 3.375em;}
 .font_4{font-size: 2.0625em;}
+.font_5{font-size: 1.875rem;} /*30px*/
+.font_6{font-size: 1.5rem;} /*24px*/
+.font_7{font-size: 1.75rem;} /*28px*/
+.font_8{font-size: 1.25rem;} /*20px*/
 hr{border:2px dashed #f4f4f4;}
