--- a/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
+++ b/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
@@ -183,7 +183,7 @@
 	width: 30px;
 	height: 30px;
 	vertical-align: middle;
-
+	margin-left: 30px;
 }
 .list .one .car_list li input[type="checkbox"]{
 	width: 30px;
