--- a/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
+++ b/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
@@ -194,7 +194,7 @@
 	bottom: 0.48rem;
 }
 
-/*--------------------------------------------------------------------------------已注册，有密码*/
+/*--------------------------------------------------------------------------------统一弹出层*/
 .tcc .ty{
 	width: 6.72rem;
 	height: 5.5rem;
