--- a/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
+++ b/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
@@ -26,10 +26,13 @@
 	font-size: 0.42rem;
 	text-align: center;
 	line-height: 1.1rem;
-	border: 1px rgba(255,255,255,0.35) solid;
+	border: none;
 	outline: none;
-	box-shadow: 0px 0px 3px rgba(0,0,0,0.35) inset;
-	border-radius: 0.16rem;	
+	border-radius: 0.16rem;
+}
+.input_bg{
+	background: url(/files/lianMengCardActivate/input_bg.png) no-repeat;
+	background-size: 100% 100%;
 }
 /*------------------------------------------------------------------------------------------忘记密码*/
 .forget_psw{
