--- a/src/main/webapp/styles/ahi/ahi.css
+++ b/src/main/webapp/styles/ahi/ahi.css
@@ -1,154 +1,347 @@
 @charset "utf-8";
 /* CSS Document */
 
-
+a:link {color: #000}		/* 未访问的链接 */
+a:visited {color: #000}	/* 已访问的链接 */
+a:hover {color: #000}	/* 鼠标移动到链接上 */
+a:active {color: #000}	/* 选定的链接 */
 
 /*健康指数css*/
-.center_zhis{height:823px;width:100%;text-align: center;background:#31a3ff;}
-.biaopan{width:100%;height:686px;}
-.radialIndicatorContext{padding-top:80px;}
-.xiangq{
 
-	width:358px;
-	height:104px;
-	line-height:104px;
-	color:#fff;
-	background:#00dd72;margin:0px auto; 
-    border-radius: 45px;
-     -moz-border-radius: 45px;
-    -webkit-border-radius: 45px;
-    
-    -webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);  
-     -moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);     
-     box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);   
-  }
-  .juti{
-  	color:#fff;
-  	font-size: 30px;
+
+.center_zhis{height:830px;text-align: center;background:#59b5ff;padding:0px 86px;}
+.biaopan{height:686px;}
+.radialIndicatorContext{
+
+    margin-top: 85px;
+    /*margin-left: 220px;*/
+
+}
+.zahiimg{
+    /*position: absolute;
+    top:-32px;*/
+    width:765px;
+    height:765px;
+    margin: 0px auto;
+    margin-top: -600px;
     position: relative;
-    top: -180px;
-  }
-.lie_li{padding:0px 24px;}
+}
+.ahicanvar{
+    width:565px;
+    height:565px;
+    margin: 0px auto;
+}
+
+/*上次检测时间,店铺.人员样式*/
+.upjc{color:#fff;}
+.jc_time{   display: inline-block;}
+.left{    float: left;}
+.right{    float: right;}
+.show_img{
+    background: url(/files/ahi/AHIimg.png) no-repeat;height:50px;
+    width:200px;
+    text-align: center;
+    line-height:50px;
+}
+.show_shop{
+    background: url(/files/ahi/AHIimg.png) no-repeat;height:50px;
+    width:200px;
+    text-align: center;
+    line-height:50px;
+    margin:0px  auto;
+}
+.show_cur{
+    width:200px;
+    text-align: center;
+    height:32px;
+    line-height:32px;
+    margin:0px  auto;
+}
+.show_list{
+    width:200px;
+    text-align: center;
+
+}
+.show_cur span{
+    width:16px;
+    height:16px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #a1ff36;
+    display: inline-block;
+}
+/*上次检测时间,店铺.人员样式结束*/
+
+.conter_main{}
 .burder_li{
-	height:154px;
-	line-height:154px;
-	width:100%;
-	margin:24px auto 24px auto;
-	background:#fff;
-    border-radius: 45px;
-     -moz-border-radius: 45px;
-    -webkit-border-radius: 45px;
-    border: 1px  solid #9a9a9a;
-	}
+    height:210px;
+    width:100%;
+    background:#fff;
+    text-align: center;
+}
+.burder_li:hover{
+    height:210px;
+    width:100%;
+    background:#eee;
+    opacity:0.8;
+    text-align: center;
+}
+
+.zhishu_img{    vertical-align: middle;margin-top: -30px;    margin-left: 80px;}
+.back_img{margin-left:60px}
+.burder_li_div{
+    padding-top: 80px;
+    padding-right: 86px;
+    padding-left: 86px;
+}
+
 .AHI_biao{vertical-align:middle;margin-left:30px;margin-top:-35px;}
-.xitong{margin-left:24px;margin-top:-10px;width: 144px;}
-.xt_zhus{font-size:56px;color:#ff3a3a; margin-left: 24px;}
+
+.xt_zhus{color:#ff4c8d;  /*font-weight: bold;*/width: 138px;}
 .miaos{color:#7e7e7e;float:right;margin-right:24px;}
 .miaos img{vertical-align:middle}
 
 
 /*健康指数详情页css*/
-.center_1{height:332px;width:100%;text-align: center;background:#31a3ff;}
-.num{height:240px;}
-.num_font{height:166px;line-height:166px;font-size:120px;color:#fff;}
+.center_1{height:440px;width:100%;text-align: center;background:#fff;}
+.banner_img{margin-top:32px;}
+.banner_img img{width:230px}
+.num_font{
+    height:110px;
+    line-height:110px;
+    font-size:5rem;
+    color:#f64a88;
+    /*文字倒影*/
+    -webkit-box-reflect: below -40px -webkit-linear-gradient(transparent,transparent 40%,rgba(255,255,255,.3));
+
+
+}
+
+.xqburder_li{
+    height:168px;
+    line-height:168px;
+    width:100%;
+    background:#fff;
+
+    border-bottom: 2px  dashed #e5e5e5;
+    /* border-top: 1px  dashed #e5e5e5; */
+}
+.bor_div{
+    border-bottom: 2px  dashed #ccc;
+}
+.xitong{margin-left:56px;}
+.subicon_img{vertical-align: middle;    margin-top: -10px;}
+.subicon_font{margin-left:20px;}
+.jingbao{
+    display:inline-block;
+    text-align:center;
+    width:184px;
+    height:76px;
+    color:#fff;
+    line-height:76px;
+    background:url(/files/ahi/jinbao.png) no-repeat;
+    /*   margin-left: -85px; */
+
+}
+.liangh{
+    display:inline-block;
+    text-align:center;
+    width:184px;
+    height:76px;
+    color:#fff;
+    line-height:76px;
+    background:url(/files/ahi/liangh.png) no-repeat;
+    /*    margin-left: -85px; */
+
+}
+
+.sub_solid{ border: 1px  dashed #e5e5e5;}
+.lianghao{
+    height: 93px;
+    line-height: 93px;
+    /*padding:0px  35px;*/
+    text-align: center;
+
+}
+.radius{
+    width:32px;
+    height:32px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    display: inline-block;
+    margin-left: -90px;
+}
+.radiuscoloe_1{
+    background: #d8d8d8;
+}
+.radiuscoloe_2{
+    background: #f64a88;
+}
+.radiuscoloe_3{
+    background: #00de3f;
+}
+.bgjc{
+    /*width:104px;
+    height:60px;*/
+    background: url(/files/ahi/jc.png) 8px center no-repeat;
+    /*border-radius: 10%;
+     -moz-border-radius: 10%;
+    -webkit-border-radius: 10%;
+   /*实现背景渐变*/
+    /*background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(255, 131, 176, 1)), to(rgba(246, 74, 136, 1)));*/
+    color:#fff
+}
+
+.subxitong{
+    display:inline-block ;
+    float:left;
+    width:230px;
+    text-align: left;
+}
+.zk_img{margin-left:20px}
+
+
+
+
+
+
 .numxiangqfont{
-	height:70px;
-	line-height:70px;
-	color:#fff;
-	margin:0px auto; 
+    height:70px;
+    line-height:70px;
+    color:#fff;
+    margin:0px auto;
 }
 .numxiangq{
-	width:260px;
-	background:#00dd72;
+    width:260px;
+    background:#00dd72;
     border-radius: 45px;
-     -moz-border-radius: 45px;
+    -moz-border-radius: 45px;
     -webkit-border-radius: 45px;
-    
-    -webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);  
-     -moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);     
-     box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);   
-  }
-  .centerxiangq{
-  	width:220px;
-	background:#f64a88;
-    border-radius: 45px;
-     -moz-border-radius: 45px;
-    -webkit-border-radius: 45px;
-    
-    -webkit-box-shadow:5px 5px 5px 2px   rgba(246, 74, 136, 0.1);  
-     -moz-box-shadow:5px 5px 5px 2px  rgba(246, 74, 136, 0.1);     
-     box-shadow:5px 5px 5px 2px  rgba(246, 74, 136, 0.1); 
-  }
-  .num_leftbut{display:inline-block;float:left;margin-left:24px}
- .num_rightbut{display:inline-block;float:right;margin-right:24px}
-.jingbao{
-	display:inline-block;
-	text-align:center;
-	width:154px;
-	height:74px;
-	color:#f64a88;
-	line-height:74px;
-	border:1px solid #f64a88;
-	border-radius: 10px;
-     -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-	
+
+    -webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);
+    -moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
+    box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
 }
+.centerxiangq{
+    width:220px;
+    background:#f64a88;
+    border-radius: 45px;
+    -moz-border-radius: 45px;
+    -webkit-border-radius: 45px;
+
+    -webkit-box-shadow:5px 5px 5px 2px   rgba(246, 74, 136, 0.1);
+    -moz-box-shadow:5px 5px 5px 2px  rgba(246, 74, 136, 0.1);
+    box-shadow:5px 5px 5px 2px  rgba(246, 74, 136, 0.1);
+}
+.num_leftbut{display:inline-block;float:left;margin-left:24px}
+.num_rightbut{display:inline-block;float:right;margin-right:24px}
+
 .no_jignbao{display:inline-block;
-	text-align:center;
-	color:#7e7e7e;
-	}
+    text-align:center;
+    color:#7e7e7e;
+}
 
 .numlie_li{text-align:center;}
-.numxitong{float:left}
-.subnumlie_li{padding:24px  100px;}
-.subxitong{margin-top:-10px;}
-.submiaos{float:right;margin-right:24px;}
-.sub_solid{border:1px solid #e1e1e1;margin-top: 20px;}
-.lianghao{width:100%;/* height:80px;line-height:80px; */margin-top:30px}
-/*检测样式*/
-.jc_ul{
-    /*width:200px;*/
-
-   /*  position: absolute;
-    left:20%; */
-    margin:40px auto;
+.numxitong{
+    float:left;
+    text-align: left;
+    width:33%;
 }
-.jc_color{color:#31A3FF;    float: left;height: 45px; width:260px;text-align: right;}
-.jc_ul li{
-    margin: 5px auto;
-    width: 620px
+.subnumlie_li{padding:0px  135px;}
+
+.submiaos{
+    width:158px;
+    float:right;
+    margin-right:56px;
+    color:#d2d2d2;
+    display:inline-block ;
+}
+.subright{
+    float:right;
+    color:#d2d2d2;
+    display:inline-block ;
+    width: 121px;
+}
+.subxitong_1{
+    float: left;
+    height: 45px;
+    /*  width: 260px; */
+    text-align: right;
+    margin-left: 2%;
+}
+
+.title_color{ color: #7b7b7b;}
+
+/* 三级页面样式*/
+.radiusblue{
+    color:#7cc9ff;
+    font-size:3rem;
+    text-align: center;
+    height:120px;
+    line-height:120px;
+    /*实现文字渐变*/
+    background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(62, 216, 255, 1)), to(rgba(88, 150, 255, 1)));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 
 }
-.jc_shop{width: 350px;display: inline-block;text-align: left; height: 45px;color:#7e7e7e}
+.radiusjb{
+    display:inline-block;
+    height:20px;
+    width:20px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    /*实现背景渐变*/
+    background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(62, 216, 255, 1)), to(rgba(88, 150, 255, 1)));
 
+}
+.mstop{margin-top:30px;}
+.Thirly_li{
+    margin-right:110px;
+    margin-left:110px;
+    margin-bottom:50px;
+
+}
+
+.Thirly_liimg{margin-top:3px}
+
+.submiaos_1{
+    width:74%;
+    display: inline-block;
+    text-align: left;
+    height: 45px;
+    margin-left: 20px;
+
+}
 
 /* 图片展示样式*/
 .zhezhao{
-	display:none;
-	vertical-align: middle;
-	background: url(../img/bg_img.png) repeat;    
-	text-align: center; 
+    display:none;
+    vertical-align: middle;
+    background: url(/files/ahi/bg_img.png) repeat;
+    text-align: center;
     height: 100%;
     width: 100%;
     position: absolute;
     /* top: 0px; */
     z-index: 9999999999;
     overflow: auto;
-	}
+}
 .zzclose{
-	
-	 color: #ffffff;
+
+    color: #ffffff;
     font-size: 30px;
     position: relative;
     float: right;
     right: 20px;
 }
- .xq_img{width:100px;height:100px;margin-right:10px;}
- .zsimg{
- 	width:95%;
- 	
- 	}
-
-.footer{width:100%;text-align:center;color:#31a3ff;}
+.xq_img{width:100px;height:100px;margin-right:10px;}
+/*.zsimg{
+    width:890px;
+    margin-top:30px;
+    }*/
+ 
 
