--- a/src/main/webapp/styles/login/css/login.css
+++ b/src/main/webapp/styles/login/css/login.css
@@ -12,7 +12,7 @@
 /*----------------------------------------------------------------------用户输入主要信息*/
 .main_txt{
 	width: 100%;
-	margin-top: 1.32rem;
+	padding-top: 1.32rem;
 	overflow: hidden;
 	position: relative;
 }
