注册页面提交按钮样式

--- a/src/main/webapp/styles/register/register.css
+++ b/src/main/webapp/styles/register/register.css
@@ -114,9 +114,8 @@
 /*-------------------------------------------------------------------------底部提交按钮*/
 .footer_button{
 	width: 100%;
-	position: fixed;
-	left: 0;
-	bottom: 0;
+	position: relative;
+	top: 2.6rem;
 	background: #fff;
 }
 .footer_button .tjxx{
