--- a/src/main/webapp/styles/lianMengKa/css/lianMengDetail.css
+++ b/src/main/webapp/styles/lianMengKa/css/lianMengDetail.css
@@ -4,7 +4,7 @@ img{
 	display: block;
 }
 body{
-	width: 1080px;
+	width: 100%;
 }
 .box{
 	width: 95.74%;
@@ -19,7 +19,7 @@ body{
 	text-align: center;
 	/*font-size: 3.375em;*/
 	color: #505050;
-	
+
 }
 /*卡的Logo*/
 .logo{
@@ -35,6 +35,8 @@ body{
 	border-radius: 50%;
 }
 .logo .circle img{
+	width: 236px;
+	height: 236px;
 	margin: 9px auto;
 }
 /*发卡店铺*/
@@ -64,13 +66,16 @@ body{
 	line-height: 56px;
 }
 .width_1{
-	width: 120px;
+	/*width: 120px;*/
+	width: 108px;
 }
 .width_2{
-	width: 220px;
+	/*width: 220px;*/
+	width: 204px;
 }
 .width_3{
-	width: 350px;
+	/*width: 350px;*/
+	width: 317px;
 }
 .shenglue{
 	overflow: hidden;
@@ -91,10 +96,10 @@ body{
 	border-bottom: 1px solid #E1E1E1;
 }
 .margin_1{
-	margin-left: 30px;
+	margin-left: 20px;
 }
 .margin_2{
-	margin-left: 44px;
+	margin-left: 38px;
 }
 .card_detailed{
 	display: block;
@@ -106,8 +111,8 @@ body{
 	text-align: center;
 	line-height: 98px;
 	border-radius: 49px;
-	-webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);     
-    box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);
+	-moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
+	box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
 }
 
