--- a/src/main/webapp/styles/ahi/ahi.css
+++ b/src/main/webapp/styles/ahi/ahi.css
@@ -133,7 +133,7 @@ a:active {color: #000;
     width:100%;
     background:#fff;
 
-    border-bottom: 2px  dashed #e5e5e5;
+    border-bottom: 2px  dashed #ccc;
     /* border-top: 1px  dashed #e5e5e5; */
 }
 .bor_div{
@@ -264,6 +264,7 @@ a:active {color: #000;
 .submiaos{
     width:33%;
     float:right;
+    text-align: right;
     margin-right:56px;
     color:#d2d2d2;
     display:inline-block ;
@@ -367,6 +368,7 @@ a:active {color: #000;
 .xq_img{width:230px;height:230px;margin-right:10px;}
 .zsimg{
     width:100%;
+    height:100%;
     /*margin-top:30px;*/
     }
  
