--- a/src/main/webapp/styles/weix.css
+++ b/src/main/webapp/styles/weix.css
@@ -18,7 +18,19 @@ ul{list-style: none;}
 
 .server_cenulcolor{    color: #7e7e7e;}
 hr{border:2px dashed #f4f4f4;}
-
+/* 缓冲图片*/
+#loading{
+    position: absolute;
+    /* width: 400px; */
+    /* height: 300px; */
+    left: 30%;
+    /* margin-left: -150px; */
+    /* text-align: center; */
+    /* padding: 7px 0 0 0; */
+    font: bold 11px Arial, Helvetica, sans-serif;
+    /* margin: 0px auto; */
+    top: 40%;
+}
 /*头部样式*/
 .goback{
     padding-left: 24px;
