--- a/src/main/webapp/styles/weix.css
+++ b/src/main/webapp/styles/weix.css
@@ -20,16 +20,18 @@ ul{list-style: none;}
 hr{border:2px dashed #f4f4f4;}
 /* 缓冲图片*/
 #loading{
-    position: relative;
-    /* width: 400px; */
-    /* height: 300px; */
+    position: fixed;
+    width: 100%;
+    height: 100%;
     /* left: 30%; */
     /* margin-left: -150px; */
     text-align: center;
     /* padding: 7px 0 0 0; */
     font: bold 11px Arial, Helvetica, sans-serif;
     /* margin: 0px auto; */
-    margin-top: 50%;
+    padding-top: 50%;
+    z-index: 999999;
+    background: #fff;
 }
 #loading img{
     width:580px;
