--- a/src/main/webapp/styles/weix.css
+++ b/src/main/webapp/styles/weix.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 *{margin:0px;padding:0px;}
-body{width:100%;background:#fff;font-family: "微软雅黑" ;height:auto;overflow:auto;font-size: 16px;font-size: 100%;}
+body{width:100%;background:#f6f6f6;font-family: "微软雅黑" ;height:auto;overflow:auto;font-size: 16px;font-size: 100%;}
 a{text-decoration:none;}
 a:{text-decoration:none;}
 ul{list-style: none;}
@@ -39,7 +39,11 @@ hr{border:2px dashed #f4f4f4;}
 /*头部样式*/
 .goback{
     padding-left: 24px;
-    margin-top: 20px;}
+    padding-top: 20px;
+    background: #fff;
+    height: 65px;
+    line-height: 65px;
+    vertical-align: middle;}
 .title{height:116px;width:100%;line-height:116px;text-align: center;}
 .title_img{display:inline-block;margin-left:42px;float:left;}
 .title_img img{vertical-align:middle; }
