--- a/src/main/webapp/styles/personCenter/car-brand.css
+++ b/src/main/webapp/styles/personCenter/car-brand.css
@@ -19,6 +19,9 @@
 }
 
 .ch{
+	color:rgb(88,181,225);
+	font-weight: bold;
+	font-size: 20px;
 	background: #fcfcfc;
 }
 .index-sidebar-container {
@@ -29,7 +32,7 @@
 	-webkit-user-select: none;
 	user-select: none;
 	cursor: default;
-	/*display: none;*/
+	display: none;
 }
 .index-sidebar-container ul {
 	padding: 0 5px;
@@ -55,3 +58,16 @@
 	text-align: center;
 	color: #999;
 }
+
+/*------------------------------------------------------------------------------------------------------------------------二层车型车系信息*/
+.second_carList{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #fff;
+	display: none;
+}
+
+
