--- a/src/main/webapp/styles/personCenter/car-brand.css
+++ b/src/main/webapp/styles/personCenter/car-brand.css
@@ -68,6 +68,87 @@
 	left: 0;
 	background: #fff;
 	display: none;
+	z-index: 4;
+	background: #fff;
+	overflow: auto;
 }
-
-
+.second_cpxx{
+	width: 100%;
+	padding: 10px 20px;
+	font-size: 20px;
+	background: #58B5FF;
+	color: #fff;
+	box-sizing: border-box;
+}
+.second_carList ul{
+	padding-bottom: 2.2rem;
+}
+.second_carList ul li{
+	width: 100%;
+	padding: 10px 20px;
+	font-size: 16px;
+	border-bottom: 1px solid #ccc;
+	box-sizing: border-box;
+}
+.second_btn{
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	background: #fff;
+}
+.second_btn .second_back{
+	width: 1.9rem;
+	height: 1rem;
+	background: #58B5FF;
+	color: #fff;
+	text-align: center;
+	line-height: 1rem;
+	margin: 16px auto;
+	font-size: 20px;
+	border-radius: 0.2rem;
+}
+/*------------------------------------------------------------------------------------------------------------------------三层车型信息*/
+.third_carList{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #fff;
+	display: none;
+	z-index: 6;
+	background: #fff;
+	overflow: auto;
+}
+.third_cpxx{
+	width: 100%;
+	padding: 10px 20px;
+	font-size: 20px;
+	background: #58B5FF;
+	color: #fff;
+}
+.third_carList ul li{
+	width: 100%;
+	padding: 10px 20px;
+	font-size: 16px;
+	border-bottom: 1px solid #ccc;
+}
+.third_btn{
+	width: 100%;
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	background: #fff;
+}
+.third_btn .third_back{
+	width: 1.9rem;
+	height: 1rem;
+	background: #58B5FF;
+	color: #fff;
+	text-align: center;
+	line-height: 1rem;
+	margin: 16px auto;
+	font-size: 20px;
+	border-radius: 0.2rem;
+}
