--- a/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
+++ b/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
@@ -136,6 +136,16 @@
    -webkit-text-fill-color: transparent;
 
 }
+.tcc .l_box .l_tj{
+	display: block;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 2.24rem;
+	background-image: -webkit-gradient(linear, 0 0, 0 bottom, from(rgba(62, 216, 255, 1)), to(rgba(88, 150, 255, 1)));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
 /*--------------------------------------------------中间框*/
 .tcc .l_box .l_dd{
 	width: 100%;
