--- a/src/main/webapp/styles/personCenter/car-brand.css
+++ b/src/main/webapp/styles/personCenter/car-brand.css
@@ -148,7 +148,7 @@
 	color: #fff;
 	text-align: center;
 	line-height: 1rem;
-	margin: 16px auto;
+	margin: 0.16rem auto;
 	font-size: 20px;
 	border-radius: 0.2rem;
 }
