--- a/src/main/webapp/styles/personCenter/car-brand.css
+++ b/src/main/webapp/styles/personCenter/car-brand.css
@@ -95,7 +95,7 @@
 	position: fixed;
 	bottom: 0px;
 	left: 0px;
-	background: #fff;
+	background: #58B5FF;
 }
 .second_btn .second_back{
 	width: 1.9rem;
@@ -104,7 +104,7 @@
 	color: #fff;
 	text-align: center;
 	line-height: 1rem;
-	margin: 16px auto;
+	margin: 0.16rem auto;
 	font-size: 20px;
 	border-radius: 0.2rem;
 }
