--- a/src/main/webapp/styles/personCenter/car-brand.css
+++ b/src/main/webapp/styles/personCenter/car-brand.css
@@ -95,10 +95,10 @@
 	position: fixed;
 	bottom: 0px;
 	left: 0px;
-	background: #58B5FF;
+	background: #fff;
 }
 .second_btn .second_back{
-	width: 1.9rem;
+	width: 90%;
 	height: 1rem;
 	background: #58B5FF;
 	color: #fff;
@@ -127,6 +127,7 @@
 	font-size: 20px;
 	background: #58B5FF;
 	color: #fff;
+	box-sizing: border-box;
 }
 .third_carList ul li{
 	width: 100%;
@@ -142,7 +143,7 @@
 	background: #fff;
 }
 .third_btn .third_back{
-	width: 1.9rem;
+	width: 90%;
 	height: 1rem;
 	background: #58B5FF;
 	color: #fff;
