--- a/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
+++ b/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
@@ -29,6 +29,14 @@
 	border: 1px #d9d9d9 solid;
 	margin-left: -2.5%;
 }
+/*---------------------------------------------------------------------------------------------客服logo*/
+.kf{
+	position: fixed;
+	top: 50%;
+	right: 0;
+	margin-top: -70px;
+	z-index: 33;
+}
 /*主体内容样式*/
 #wrap{
 	width: 95.37%;
