--- a/src/main/webapp/styles/wxlm.css
+++ b/src/main/webapp/styles/wxlm.css
@@ -59,3 +59,21 @@ span{
 .color_10{
 	color: #31a3ff;
 }
+/* 缓冲图片*/
+#loading{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	/* left: 30%; */
+	/* margin-left: -150px; */
+	text-align: center;
+	/* padding: 7px 0 0 0; */
+	font: bold 11px Arial, Helvetica, sans-serif;
+	/* margin: 0px auto; */
+	padding-top: 50%;
+	z-index: 999999;
+	background: #fff;
+}
+#loading img{
+	width:620px;
+}
