--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -7,6 +7,14 @@ body{
 .width_2{
 	width: 39%;
 }
+.kf{
+	width: 1.4rem;
+	position: fixed;
+	top: 50%;
+	right: 0;
+	margin-top: -70px;
+	z-index: 33;
+}
 /*-----------------------------------------------------------------------------------------每一条单据*/
 .bills{
 	width: 100%;
