修改固定定位

--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -7,13 +7,16 @@ body{
 .width_2{
 	width: 39%;
 }
-.kf{
+.kfk{
 	width: 1.4rem;
 	position: fixed;
 	top: 50%;
 	right: 0;
-	margin-top: -70px;
-	z-index: 33;
+	margin-top: -0.7rem;
+	z-index: 333333;
+}
+.kf{
+	width: 1.4rem;
 }
 /*-----------------------------------------------------------------------------------------每一条单据*/
 .bills{
