--- a/src/main/webapp/styles/lianMengKa/css/lianMengCard.css
+++ b/src/main/webapp/styles/lianMengKa/css/lianMengCard.css
@@ -30,7 +30,7 @@ img{
 .card_barcode{
 	width: 100%;
 	height: 206px;
-	background: #31a3ff;
+	/*background: #31a3ff;*/
 	border-radius: 15px;
 }
 .barcode_img{
@@ -51,9 +51,11 @@ img{
 	display: inline-block;
 }
 .card_number .number{
-	display: inline;
+	display: inline-block;
 	background: #31a3ff;
-	border-radius: 22px;
+	border-radius: 25px;
+	height: 50px;
+	line-height:50px;
 }
 .card_number .number span{
 	color: white;
@@ -147,7 +149,12 @@ img{
 	-moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
 	box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
 }
-
+.fjt{
+	display: block;
+	width: 100%;
+	height: 24px;
+	background: #f2f2f2;
+}
 /*遮罩层*/
 .zheZhaoCeng{
 	width: 100%;
