--- a/src/main/webapp/styles/lianMengKa/css/lianMengCard.css
+++ b/src/main/webapp/styles/lianMengKa/css/lianMengCard.css
@@ -7,6 +7,7 @@ img{
 .lianMeng{
 	width: 100%;
 	background: #fff;
+	padding-top: 34px;
 }
 .box{
 	width: 95.74%;
@@ -17,7 +18,7 @@ img{
 .card_name{
 	width: 100%;
 	height: 53px;
-	margin: 30px auto 34px;
+	margin: 0 auto 34px;
 	text-align: center;
 	/*font-size: 3.375em;*/
 	color: #505050;
