--- a/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
+++ b/src/main/webapp/styles/lianMengCardActivate/lianMengCardActivate.css
@@ -19,13 +19,13 @@
 .main_txt .sys_1{
 	width: 0.67rem;
 	position: absolute;
-	top: 0.22rem;
+	top: 1.55rem;
 	right: 1.18rem;
 }
 .main_txt .sys_2{
 	width: 0.67rem;
 	position: absolute;
-	top: 1.9rem;
+	top: 3.25rem;
 	right: 1.18rem;
 }
 .main_txt input{
@@ -37,7 +37,7 @@
 	margin-left: calc(50% - 3.65rem);
 	box-sizing: border-box;
 	font-size: 0.42rem;
-	text-align: center;
+	text-indent: 0.24rem;
 	line-height: 1.1rem;
 	border: none;
 	outline: none;
