车险投保的客服图片的大小

--- a/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
+++ b/src/main/webapp/styles/baoxian/css/cheXianTouBao.css
@@ -31,7 +31,7 @@
 }
 /*---------------------------------------------------------------------------------------------客服logo*/
 .kfk{
-	width: 1.4rem;
+	width: 125px;
 	position: fixed;
 	top: 50%;
 	right: 0;
@@ -39,7 +39,7 @@
 	z-index: 333333;
 }
 .kf{
-	width: 1.4rem;
+	width: 100%;
 }
 /*主体内容样式*/
 #wrap{
