--- a/src/main/webapp/styles/shopbaoyangtixing/baoyanglist.css
+++ b/src/main/webapp/styles/shopbaoyangtixing/baoyanglist.css
@@ -7,7 +7,7 @@
 .by_name{font-weight:bold;}
 .by_center{height:66px;line-height:66px;}
 .by_cenulcolor{    color: #565656;}
-.margin_auto li{padding:0px  24px;height:334px;line-height:334px;border-top:1px solid #cdcdcd;border-bottom:1px solid #cdcdcd}
+.margin_auto li{padding:0px  24px;border-top:1px solid #cdcdcd;border-bottom:1px solid #cdcdcd}
 .by_top{margin-top:30px;}
 .by_width{
 	color:#fff;
