--- a/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
+++ b/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
@@ -1,85 +1,136 @@
-/*公共样式*/
-.blue{
+@charset "utf-8";
+/* CSS Document */
+span{
+	display: inline-block;
+}
+/*详情*/
+.detail_1{
+	margin-top: 10px;
+	width: 100%;
+	/*border-top: 1px #cdcdcd solid;*/
+	border-bottom: 1px #cdcdcd solid;
+}
+.top_1{
+	width: 100%;
+	overflow: hidden;
+	margin-top: 50px;
 	color: #31a3ff;
 }
-.yellow{
-	background: #ffbb05;
-}
-.red{
-	color: #ff1c3c;
-}
-.green{
-	background: #07d6dd;
-}
-.white{
-	color: white;
-}
-span{display: inline-block;}
-/*每一次的消费记录*/
-.box{
-	width: 100%;
-	border-top: 1px #e1e1e1 solid;
-	border-bottom: 1px #e1e1e1 solid;
-}
-/*Top*/
-.top{
-	width: 100%;
-	overflow: hidden;
-	margin-top: 33px;
-}
-.top div{
+.top_1 .left_11{
 	float: left;
+	overflow: hidden;
+	margin-left: 26px;
 }
-/*时间*/
-.timer{
-	width: 50%;
-	text-indent: 24px;
+.top_1 .right_11{
+	float: right;
+	overflow: hidden;
+	margin-right: 26px;
 }
-/*公里数*/
-.number{
-	width: 50%;
-	text-align: right;
-	box-sizing: border-box;
-	padding-right: 24px;
-}
-/*Middle*/
-.middle{
+
+/*项目*/
+.middle_1{
 	width: 100%;
-	min-height: 53px;
-	margin-top: 25px;
+	margin: 29px 0px 0px;
+	color: #565656;
 	overflow: hidden;
 }
-.middle div{
+.middle_1 .left_1{
+	width: 22.25%;
+	text-indent: 26px;
 	float: left;
+	line-height: 47px;
 }
-/*消费类型*/
-.middle .left{
-	text-indent: 24px;
+.middle_1 .right_1{
+	width: 75.4%;
+	min-height: 49px;
+	float: left;
+	overflow: hidden;
 }
-/*.middle .center{
-	width: 13.42%;
-	height: 53px;
-	line-height: 53px;
+.middle_1 .right_1 div{
+	float: left;
+	margin-right: 10px;
+	vertical-align: middle;
+}
+.middle_1 .right_1 span{
+	width: 38px;
+	height: 38px;
+	border: 2px #565656 solid;
+	border-radius: 50%;
 	text-align: center;
-	border-radius: 7px;
-}*/
-.middle .right{
-	width: 77%;
-	min-height: 53px;
-	line-height: 53px;
+	line-height: 35px;
+	font-size: 30px;
+	margin-right: 5px;
 	box-sizing: border-box;
-	padding: 0px 24px 0px 5px;
+	position: relative;
+	top: -2px;
 }
-/*Bottom*/
-.bottom{
+.middle_1 .right_1 p{
+	display: inline-block;
+	line-height: 47px;
+}
+
+/*付款方式*/
+.bottom_1{
 	width: 100%;
 	overflow: hidden;
-	margin: 18px 0px 40px 0px;
+	margin-bottom: 33px;
+	color: #565656;
 }
-.bottom div{
+.bottom_1 div{
 	float: left;
+	margin-top: 29px;
 }
-/*付款方式*/
-.bottom .left{
-	text-indent: 24px;
+/*颜色*/
+.red{
+	color: #ff1e2e;
+}
+/*去评价*/
+.pingjia{
+	width: 160px;
+	height: 60px;
+	background: #ff8d12;
+	border-radius: 10px;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 60px;
+	margin: 0px auto;
+	box-sizing: border-box;
+	margin-bottom: 55px;
+}
+.btn{
+	position: relative;
+	height: 60px;
+	margin-bottom: 50px;
+}
+/*已评价*/
+.yupingjia{
+	width: 180px;
+	height: 60px;
+	border: 2px #b5b5b5 solid;
+	border-radius: 10px;
+	color: #989898;
+	text-align: center;
+	line-height: 56px;
+	/*margin: 0px auto;*/
+	position: absolute;
+	top: 0;
+	left: 25%;
+	margin-left: -90px;
+	box-sizing: border-box;
+	margin-bottom: 55px;
+}
+.sgbz{
+	width: 180px;
+	height: 60px;
+	background: #ff8d12;
+	border-radius: 10px;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 56px;
+	position: absolute;
+	top: 0px;
+	left: 75%;
+	margin-left: -90px;
+	box-sizing: border-box;
+	margin-bottom: 55px;
 }
