--- a/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
+++ b/src/main/webapp/styles/shopxiaofeijilu/css/xiaoFeiJiLu.css
@@ -77,7 +77,7 @@ span{
 	color: #565656;
 }
 .bottom_1 div{
-	float: left;
+	/*float: left;*/
 	margin-top: 29px;
 }
 /*颜色*/
@@ -93,7 +93,10 @@ span{
 	color: #FFFFFF;
 	text-align: center;
 	line-height: 60px;
-	margin: 0px auto;
+	position: absolute;
+	top: 0;
+	left: 25%;
+	margin-left: -90px;
 	box-sizing: border-box;
 	margin-bottom: 55px;
 }
@@ -111,7 +114,6 @@ span{
 	color: #989898;
 	text-align: center;
 	line-height: 56px;
-	/*margin: 0px auto;*/
 	position: absolute;
 	top: 0;
 	left: 25%;
@@ -126,7 +128,7 @@ span{
 	border-radius: 10px;
 	color: #FFFFFF;
 	text-align: center;
-	line-height: 56px;
+	line-height: 60px;
 	position: absolute;
 	top: 0px;
 	left: 75%;
