--- a/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
+++ b/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
@@ -53,8 +53,11 @@ li{
 	border: 0.04rem #fff solid;
 }
 .photo img{
-	width: 100%;
-	height: 100%;
+	width: 105%;
+	height: 105%;
+	position: relative;
+	top: -2.5%;
+	left: -2.5%;
 }
 .step_num{
 	width: 0.53rem;
@@ -101,5 +104,5 @@ li{
 .img_bg img{
 	margin: 0 auto;
 	max-width: 100%;
-	border: 0.03rem #fff solid;
+	/*border: 0.03rem #fff solid;*/
 }
