--- a/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
+++ b/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
@@ -62,7 +62,7 @@ li{
 .step_num{
 	width: 0.53rem;
 	height: 0.53rem;
-	line-height: 0.53rem;
+	line-height: 0.55rem;
 	margin: 0.16rem auto;
 	text-align: center;
 	background: #31a3ff;
@@ -74,15 +74,23 @@ li{
 	color: #505151;
 }
 .btn{
-	width: 80px;
-	height: 1.08rem;
-	line-height: 1.08rem;
+	width: 2.5rem;
+	height: 0.8rem;
+	line-height: 0.8rem;
 	text-align: center;
-	margin: 0px auto;
+	margin: 0px auto 0.5rem;
 	background: #31A3FF;
-	border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
+	border-radius: 0.2rem;
+	-webkit-border-radius: 0.2rem;
+	-moz-border-radius: 0.2rem;
+}
+.fgx{
+	width: 100vw;
+	height: 0.2rem;
+	background: #f5f5f5;
+	position: relative;
+	top: 0;
+	left: -0.49rem;
 }
 /*-------------点击图片放大效果*/
 .box{
