--- a/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
+++ b/src/main/webapp/styles/shopshigongbuzhou/css/stepPhoto.css
@@ -10,9 +10,10 @@ body{
 
 /*------------------------------------------主体样式*/
 .wrap{
-	margin: 0.4rem 0.49rem 0px;
+	margin: 0rem 0.49rem 0px;
 }
 .title{
+	margin-top: 0.4rem;
 	width: 100%;
 	overflow: hidden;
 }
