修改点击方法图片的问题

--- a/src/main/webapp/styles/shopshigongbuzhou/css/standardProcesses.css
+++ b/src/main/webapp/styles/shopshigongbuzhou/css/standardProcesses.css
@@ -77,14 +77,14 @@ li{
 }
 .step_detail{
 	color: #4d4d4d;
-	height: 1.25rem;
+	/*height: 1.25rem;*/
 	margin: 0.15rem 0.24rem 0rem 0.24rem;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 #step_note{
 	margin: 0.1rem 0.24rem 0rem 0.24rem;
 	color: #ff083d;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 
