--- a/src/main/webapp/styles/baoxianDetail/cheXianDetail.css
+++ b/src/main/webapp/styles/baoxianDetail/cheXianDetail.css
@@ -107,4 +107,14 @@ body{
 		margin-top: 32px;
 	}
 }
-
+.tb_btn{
+	width: 100%;
+	height: 1.2rem;
+	background: #58b5ff;
+	position: fixed;
+	bottom: 0;
+	color: #fff;
+	text-align: center;
+	line-height: 1.2rem;
+	display: none;
+}
