--- a/src/main/webapp/styles/cheXianList/cheXianList.css
+++ b/src/main/webapp/styles/cheXianList/cheXianList.css
@@ -18,6 +18,35 @@ body{
 .kf{
 	width: 1.4rem;
 }
+/*搜索框*/
+.ss{
+	width: 100%;
+	height: 0.8rem;
+	margin: 0.24rem 0;
+}
+.ss_val{
+	float: left;
+	width: 70%;
+	margin-left: 0.24rem;
+	height: 100%;
+	background: url(/files/cheXianList/input_bg.png) no-repeat;
+	background-size: 100% 100%;
+	border: none;
+	text-indent: 0.3rem;
+	outline: none;
+}
+.ss_btn{
+	height: 100%;
+	width: 2.2rem;
+	text-align: center;
+	background: url(/files/cheXianList/detail_bg.png) no-repeat;
+	background-size: 100% 100%;
+	line-height: 0.75rem;
+	float: right;
+	margin-right: 0.24rem;
+	cursor: pointer;
+}
+
 /*-----------------------------------------------------------------------------------------每一条单据*/
 .bills{
 	width: 100%;
