--- a/src/main/webapp/styles/pullToRefresh.css
+++ b/src/main/webapp/styles/pullToRefresh.css
@@ -11,7 +11,6 @@
 	z-index: 1;
 	height: 100%;
 	width: 100%;
-	background: #333;
 }
 .scroller {
 	position: absolute;
@@ -31,17 +30,17 @@
 }
 .pullDown, .pullUp {
 	text-align: center;
-	height: 40px;
-	line-height: 40px;
-	font-size: 12px;
+	height: 0.4rem;
+	line-height: 0.4rem;
+	font-size: 0.36rem;
 	color: #888;
 	font-family: Arial, Microsoft YaHei;
 	background-color: #333;
 }
 .pullDown .pullDownIcon, .pullUp .pullUpIcon {
 	background: url("/files/arrow.png") no-repeat;
-	width: 24px;
-	height: 24px;
+	width: 0.24rem;
+	height: 0.24rem;
 	position: absolute;
 	margin-top: 8px;
 	margin-bottom: 8px;
