--- a/src/main/webapp/styles/pullToRefresh.css
+++ b/src/main/webapp/styles/pullToRefresh.css
@@ -30,17 +30,17 @@
 }
 .pullDown, .pullUp {
 	text-align: center;
-	height: 0.4rem;
-	line-height: 0.4rem;
-	font-size: 0.36rem;
+	height: 40px;
+	line-height: 40px;
+	font-size: 2.25rem;
 	color: #888;
 	font-family: Arial, Microsoft YaHei;
 	background-color: #333;
 }
 .pullDown .pullDownIcon, .pullUp .pullUpIcon {
 	background: url("/files/arrow.png") no-repeat;
-	width: 0.24rem;
-	height: 0.24rem;
+	width: 24px;
+	height: 24px;
 	position: absolute;
 	margin-top: 8px;
 	margin-bottom: 8px;
