--- a/src/main/webapp/styles/weixinfenxiang/css/share.css
+++ b/src/main/webapp/styles/weixinfenxiang/css/share.css
@@ -262,10 +262,30 @@ ul{list-style: none;}
     float: right;
     right: 20px;
 }
- .xq_img{width:230px;height:230px;margin-right:10px;}
-  .zsimg{
+.xq_img{width:230px;height:230px;margin-right:10px;}
+.zsimg{
  	width:100%;
     
  	
- 	}
- 
+}
+/* 缓冲图片*/
+#loading{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	/* left: 30%; */
+	/* margin-left: -150px; */
+	text-align: center;
+	/* padding: 7px 0 0 0; */
+	font: bold 11px Arial, Helvetica, sans-serif;
+	/* margin: 0px auto; */
+	padding-top: 50%;
+	z-index: 999999;
+	background: #fff;
+}
+#loading img{
+	width:3.2rem;
+	margin: 0 auto;
+}
