--- a/src/main/webapp/styles/shoppersonCenter/rechargeableCardMX.css
+++ b/src/main/webapp/styles/shoppersonCenter/rechargeableCardMX.css
@@ -1,118 +1,68 @@
-@charset "utf-8";
-/* CSS Document */
-img{
-	display: block;
-}
-body{
-	width: 100%;
-}
 .box{
-	width: 95.74%;
-	margin: 0 auto;
-	position: relative;
-}
-/*卡的名字*/
-.card_name{
 	width: 100%;
-	height: 53px;
-	margin: 30px auto 34px;
-	text-align: center;
-	/*font-size: 3.375em;*/
-	color: #505050;
-
 }
-/*卡的Logo*/
-.logo{
+.box ul{
 	width: 100%;
-	height: 260px;
-	margin-top: 24px;
+	margin-top: 0.24rem;
 }
-.logo .circle{
-	width: 254px;
-	height: 254px;
-	margin: 0 auto;
-	border: 3px solid #31a3ff;
-	border-radius: 50%;
+.box ul li{
+	width: 95%;
+	overflow: hidden;
+	height: 0.76rem;
 }
-.logo .circle img{
-	width: 236px;
-	height: 236px;
-	margin: 9px auto;
-}
-/*发卡店铺*/
-.shop_name{
+.biaoTou{
 	width: 100%;
-	text-align: center;
 	color: #31a3ff;
-	margin-top: 24px;
+	margin: 0 auto;
 }
-/*消费详情*/
-.cost{
-	width: 100%;
-	margin-top: 57px;
-}
-.cost ul li{
-	height: 76px;
-	color: #8d8d8d;
-	line-height: 76px;
-}
-.cost ul li span{
-	display: inline-block;
+.titles{
+	height: 100%;
 	text-align: center;
+	float: left;
+	margin-left: 3%;
+	line-height: 0.76rem;
+	border-radius: 0.15rem;
+	border: 0.02rem solid #31a3ff;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
-/*宽高度样式*/
-.height{
-	height: 60px;
-	line-height: 56px;
+.biaoshen{
+	width: 100%;
+	color: #8d8d8d;
+	margin: 0.1rem auto 0rem;
+	border-bottom: 0.01rem dashed #8d8d8d;
 }
-.width_1{
-	/*width: 120px;*/
-	width: 108px;
-}
-.width_2{
-	/*width: 220px;*/
-	width: 204px;
-}
-.width_3{
-	/*width: 350px;*/
-	width: 317px;
-}
-.shenglue{
+.detals{
+	height: 100%;
+	text-align: center;
+	float: left;
+	margin-left: 3%;
+	line-height: 0.76rem;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
-.biaoTou span{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	color: #31a3ff;
-}
-.border_1{
-	border:2px solid #31a3ff;
-	border-radius: 33px;
-}
-.border_2{
-	border-bottom: 1px solid #E1E1E1;
-}
-.margin_1{
-	margin-left: 20px;
-}
-.margin_2{
-	margin-left: 38px;
-}
-.card_detailed{
-	display: block;
-	width: 219px;
-	height: 98px;
-	margin: 48px auto;
-	background: #00DD72;
-	color: #FFFFFF;
+.back{
+	width: 2rem;
+	height: 0.75rem;
+	font-size: 0.42rem;
+	line-height: 0.75rem;
+	background: #31a3ff;
+	border-radius: 0.2rem;
+	margin: 0.5rem auto 0;
 	text-align: center;
-	line-height: 98px;
-	border-radius: 49px;
-	-webkit-box-shadow:5px 5px 5px 2px   rgba(0, 0, 0, 0.1);
-	-moz-box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
-	box-shadow:5px 5px 5px 2px  rgba(0, 0, 0, 0.1);
+	color: #fff;
 }
-
+.width1{
+	width: 44%;
+}
+.width2{
+	width: 29%;
+}
+.width3{
+	width: 15%;
+}
